--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,9 +8,18 @@
             <h1>Add a Pokemon</h1>
 
             <form action="/pokemon" method="post">
+                <h5>Pokemon Info</h5>
+                <input type="text" name= "id" placeholder= "ID"><br />
                 <input type="text" name="name" placeholder="Name" ><br/>
-                <input type="text" name-="type" placeholder="Type" ><br/>
-                <input type="file" name="img" size="40">
+                <input type="text" name="img" placeholder="Image"><br />
+                <input type="text" name="type" placeholder="Type" ><br/>
+                <h5>Pokemon Stat Info</h5>
+                <input type="number" name="hp" placeholder="HP">
+                <input type="number" name="attack" placeholder="Attack">
+                <input type="number" name="defense" placeholder="Defense">
+                <input type="number" name="spattack" placeholder="SP Attack">
+                <input type="number" name="spdefense" placeholder="SP Defense">
+                <input type="number" name="speed" placeholder="Speed">
                 <input type="submit" value="Create Pokemon">
             </form>
         </div>
