--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,5 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
     
-    <title>Document</title>
+    <title>Pokedex</title>
 </head>
