--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,24 @@
     <%- include("partials/head.ejs") %>
 
 <body>
-    <h1>working</h1>
+    <div class="container">
+        <h1>Add a Pokemon</h1>
+    
+        <form action="/pokemon/<%=index%>?_method=PUT" method="post">
+            <h5>Pokemon Info</h5>
+            <input type="text" name="id" placeholder="ID" value="<%=pokemon.id%>"><br />
+            <input type="text" name="name" placeholder="Name" value="<%=pokemon.name%>" ><br />
+            <input type="text" name="img" placeholder="Image" value="<%=pokemon.img%>"><br />
+            <input type="text" name="type" placeholder="Type" value="<%=pokemon.type%>"><br />
+            <h5>Pokemon Stat Info</h5>
+            <input type="number" name="hp" placeholder="HP" value="<%=pokemon.stats.hp%>">
+            <input type="number" name="attack" placeholder="Attack" value="<%=pokemon.stats.attack%>">
+            <input type="number" name="defense" placeholder="Defense" value="<%=pokemon.stats.defense%>">
+            <input type="number" name="spattack" placeholder="SP Attack" value="<%=pokemon.stats.spattack%>">
+            <input type="number" name="spdefense" placeholder="SP Defense" value="<%=pokemon.stats.spdefense%>">
+            <input type="number" name="speed" placeholder="Speed" value="<%=pokemon.stats.speed%>">
+            <input type="submit" value="Update Pokemon">
+        </form>
+    </div>
 </body>
 </html>
