--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,49 +6,52 @@
     <body>
         <style>
             body {
-                background-color: lightcoral;
-                color: aqua;
-            }
-
-            h1 {
-                text-align: center;
-                font-size: 75px;
-                font-weight: bold;
+                background-color: #3B4CCA;
+                color: #FFDE00;
             }
 
             .container {
                 display: flex;
-                justify-content: space-around;
-                flex-flow: row wrap;
+                justify-content: center;
+                align-items: center;
+                flex-flow: row;
             }
 
             .stats {
-                border: solid 2px blue;
-            }
-
-            .damages {
-                border: solid 2px blue;
+                width: 300px;
+                margin-top: 160px;
+                margin-left: 50px;
             }
 
             li {
                 list-style: none;
+                margin: 0px;
+            }
+            img {
+                width: 250px;
+                height: 250px;
+                border-radius: 20%;
+                box-shadow: 3px 3px 3px 3px rgb(126, 139, 127);
             }
         </style>
-        <h1>
-            <%= pokeIndex.name %>
-        </h1>
+
 
         <div class="container">
             <div>
-                <img src="<%= pokeIndex.img %>">
+                <h1>
+                    <%= pokeIndex.name %>
+                </h1>
                 <h3>
                     <%=pokeIndex.id%>
                 </h3>
                 <h3> Type: <%= pokeIndex.type %>
                 </h3>
+                <img src="<%= pokeIndex.img %>">
+
+
             </div>
             <div class="stats">
-                <h4>Stats</h4>
+                <h3>Stats:</h3>
                 <ul>
                     <% for(let element in pokeIndex.stats) { %>
                         <li>
